--- a/rust-td-payload/Cargo.toml
+++ b/rust-td-payload/Cargo.toml
@@ -23,7 +23,7 @@ uefi-pi =  { path = "../uefi-pi" }
 tdx-tdcall = { path = "../tdx-tdcall" }
 tdx-logger =  { path = "../tdx-logger" }
 tdx-exception =  { path = "../tdx-exception" }
-rust-td-layout = { path = "../rust-td-layout" }
+td-layout = { path = "../td-layout" }
 serde = { version = "1.0", default-features = false, features = ["derive"]}
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 chrono = { version = "0.4.19", default-features = false, features = ["serde"]}
