--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -8,7 +8,7 @@ license = "BSD-2-Clause-Patent"
 edition = "2018"
 
 [dependencies]
-benchmark = { path = "../benchmark", optional = true }
+td-benchmark = { path = "../devtools/td-benchmark", optional = true }
 chrono = { version = "0.4.19", default-features = false, features = ["serde"]}
 linked_list_allocator = "0.9.0"
 log = "0.4.13"
@@ -23,5 +23,5 @@ uefi-pi =  { path = "../uefi-pi" }
 [features]
 default = []
 cet-ss = []
-benches = ["benchmark"]
+benches = ["td-benchmark"]
 tdx = ["tdx-tdcall", "tdx-logger"]
