td-shim-sign-payload: improve the payload signer
Refine the td-shim-sign-payload crate by:
- better documentation
- improve commandline arguments
- reuse code from td-shim-ld

Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

--- a/td-shim-sign-payload/Cargo.toml
+++ b/td-shim-sign-payload/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
 name = "td-shim-sign-payload"
 version = "0.1.0"
+description = "Sign shim payload binary with RSA/DSA"
+repository = "https://github.com/confidential-containers/td-shim"
+homepage = "https://github.com/confidential-containers"
+license = "BSD-2-Clause-Patent"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+clap = { version = "3.0", features = ["cargo"] }
+der = { version = "0.4.5", features = ["oid"]}
+env_logger = "0.9.0"
+log = "0.4.5"
 ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"]}
-scroll = { version = "0.10", default-features = false, features = ["derive"]}
-der = {version = "0.4.5", features = ["oid"]}
 r-efi = "3.2.0"
+scroll = { version = "0.10", default-features = false, features = ["derive"]}
+td-layout = { path = "../td-layout" }
+td-shim-ld = { path = "../td-shim-ld" }
