--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -16,12 +16,12 @@ r-efi = "3.2.0"
 serde = { version = "1.0", default-features = false, features = ["derive"]}
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 td-layout = { path = "../td-layout" }
+td-logger =  { path = "../td-logger", optional = true }
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
-tdx-logger =  { path = "../tdx-logger", optional = true }
 uefi-pi =  { path = "../uefi-pi" }
 
 [features]
 default = []
 cet-ss = []
 benches = ["td-benchmark"]
-tdx = ["tdx-tdcall", "tdx-logger"]
+tdx = ["tdx-tdcall", "td-logger/tdx"]
