--- a/tests/test-td-payload/Cargo.toml
+++ b/tests/test-td-payload/Cargo.toml
@@ -7,20 +7,28 @@ homepage = "https://github.com/confidential-containers"
 license = "BSD-2-Clause-Patent"
 edition = "2018"
 
-[features]
-tdx = []
-
 [dependencies]
-# Keep it as `dependencies` to satisfy bootloader-locator's requirement, though it should be `dev-dependencies`
-bootloader = "=0.10.9"
-
-[dev-dependencies]
-lazy_static = {version = "1.4.0", features = ["spin_no_std"] }
+spin = "0.9.2"
+r-efi = "3.2.0"
+linked_list_allocator = "0.9.0"
 log = "0.4.13"
-td-payload = { path = "../../td-payload" }
-tdx-tdcall = { path = "../../tdx-tdcall" }
-test-runner-client = { path = "../../devtools/test-runner-client" }
+uefi-pi =  { path = "../../uefi-pi" }
+tdx-tdcall = { path = "../../tdx-tdcall" , optional = true }
+td-logger =  { path = "../../td-logger" }
+td-exception =  { path = "../../td-exception" }
+td-layout = { path = "../../td-layout" }
+scroll = { version = "0.10.0", default-features = false, features = ["derive"]}
+serde = { version = "1.0", default-features = false, features = ["derive"]}
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
 
 [package.metadata.bootloader]
 map-physical-memory = true
-map-page-table-recursively = true
+
+[features]
+cet-ss = []
+tdx = ["tdx-tdcall", "td-logger/tdx"]
+main = []
