--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0", default-features = false, features = ["derive"]}
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 td-layout = { path = "../td-layout" }
 td-logger =  { path = "../td-logger" }
-uefi-pi =  { path = "../uefi-pi" }
+td-uefi-pi =  { path = "../td-uefi-pi" }
 
 td-benchmark = { path = "../devtools/td-benchmark", optional = true }
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
