--- a/tests/test-td-payload/Cargo.toml
+++ b/tests/test-td-payload/Cargo.toml
@@ -12,7 +12,7 @@ spin = "0.9.2"
 r-efi = "3.2.0"
 linked_list_allocator = "0.9.0"
 log = "0.4.13"
-uefi-pi =  { path = "../../uefi-pi" }
+td-uefi-pi =  { path = "../../td-uefi-pi" }
 tdx-tdcall = { path = "../../tdx-tdcall" , optional = true }
 td-logger =  { path = "../../td-logger" }
 td-exception =  { path = "../../td-exception" }
