--- a/tests/test-td-payload/Cargo.toml
+++ b/tests/test-td-payload/Cargo.toml
@@ -20,6 +20,7 @@ td-layout = { path = "../../td-layout" }
 scroll = { version = "0.10.0", default-features = false, features = ["derive"]}
 serde = { version = "1.0", default-features = false, features = ["derive"]}
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+x86 = { version = "0.44.0" }
 
 [dependencies.lazy_static]
 version = "1.0"
