--- a/tests/test-td-payload/Cargo.toml
+++ b/tests/test-td-payload/Cargo.toml
@@ -12,6 +12,7 @@ spin = "0.9.2"
 r-efi = "3.2.0"
 linked_list_allocator = "0.9.0"
 log = "0.4.13"
+cc-measurement = { path = "../../cc-measurement" }
 td-uefi-pi =  { path = "../../td-uefi-pi" }
 tdx-tdcall = { path = "../../tdx-tdcall" , optional = true }
 td-logger =  { path = "../../td-logger" }
