realize a serial printer used to output the test messages
Macro `serial_print` is implemented in `td_payload` crate and is consumed
by `td_payload` and `test-td-payload` to output the messages.

For `td-payload`, we should not expose the alloc error handler in library
so move it to the `main`.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/tests/test-td-payload/Cargo.toml
+++ b/tests/test-td-payload/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 x86 = { version = "0.47.0" }
 ring = { path = "../../library/ring", default-features = false, features = ["alloc"] }
 td-shim = { path = "../../td-shim" }
+td-payload = { path = "../../td-payload" }
 zerocopy = "0.6.0"
 
 [dependencies.lazy_static]
