--- a/tests/test-td-payload/Cargo.toml
+++ b/tests/test-td-payload/Cargo.toml
@@ -16,7 +16,6 @@ cc-measurement = { path = "../../cc-measurement" }
 td-uefi-pi =  { path = "../../td-uefi-pi" }
 tdx-tdcall = { path = "../../tdx-tdcall" , optional = true }
 td-logger =  { path = "../../td-logger" }
-td-exception =  { path = "../../td-exception" }
 td-layout = { path = "../../td-layout" }
 scroll = { version = "0.10.0", default-features = false, features = ["derive"]}
 serde = { version = "1.0", default-features = false, features = ["derive"]}
@@ -24,7 +23,7 @@ serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 x86 = { version = "0.47.0" }
 ring = { path = "../../library/ring", default-features = false, features = ["alloc"] }
 td-shim = { path = "../../td-shim" }
-td-payload = { path = "../../td-payload" }
+td-payload = { path = "../../td-payload", features = ["tdx","cet-shstk","stack-guard"] }
 zerocopy = "0.6.0"
 
 [dependencies.lazy_static]
