td-exception: add shadow stack support in #VE
Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -38,7 +38,7 @@ zerocopy = "0.6.0"
 default = ["tdx"]
 tdx = ["tdx-tdcall", "td-logger/tdx", "td-exception/tdx"]
 stack-guard = []
-cet-shstk = []
+cet-shstk = ["td-exception/cet-shstk"]
 cet-ibt = []
 acpi = []
 start = []
