td-payload: Add example for obtaining code coverage in no_std.
build command:

export RUSTFLAGS="-Cinstrument-coverage -Zno-profiler-runtime"
cargo xbuild -p td-payload --target x86_64-unknown-none --release --bin example --features=tdx,start,cet-shstk,stack-guard,coverage

Signed-off-by: xiaoyuxlu <xiaoyu1.lu@intel.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -34,6 +34,8 @@ td-benchmark = { path = "../devtools/td-benchmark", optional = true }
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
 zerocopy = "0.6.0"
 
+minicov = { version = "0.2", default-features = false, optional = true }
+
 [features]
 default = ["tdx"]
 tdx = ["tdx-tdcall", "td-logger/tdx", "td-exception/tdx"]
@@ -42,3 +44,4 @@ cet-shstk = ["td-exception/cet-shstk"]
 cet-ibt = []
 acpi = []
 start = []
+coverage = ["minicov"]
