td-benchmark: remove decrepit benchmark code
Stack and Heap profiling has been instroduced, we can remove the
`BenchmarkContext` implementation. `BenchmarkContext` relies on
`RuntimeLayout`, which is not appropriate.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -29,7 +29,6 @@ td-exception =  { path = "../td-exception" }
 td-paging =  { path = "../td-paging" }
 x86 = "0.47.0"
 x86_64 = "0.14"
-
 td-benchmark = { path = "../devtools/td-benchmark", optional = true }
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
 zerocopy = "0.6.0"
@@ -44,4 +43,5 @@ cet-shstk = ["td-exception/cet-shstk"]
 cet-ibt = []
 acpi = []
 start = []
+benches = ["td-benchmark"]
 coverage = ["minicov"]
