misc: Upgrade to latest version of zerocopy
cargo-deny has reported security vulnerability against older version of
zerocopy crate. Thus, we should upgrade to the latest version.

Advisory: https://rustsec.org/advisories/RUSTSEC-2023-0074

Signed-off-by: Jinank Jain <jinankjain@microsoft.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -30,7 +30,7 @@ x86 = "0.47.0"
 x86_64 = "0.14"
 td-benchmark = { path = "../devtools/td-benchmark", optional = true }
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
-zerocopy = "0.6.0"
+zerocopy = { version = "0.7.31", features = ["derive"] }
 
 minicov = { version = "0.2", default-features = false, optional = true }
 
