--- a/tests/test-td-payload/Cargo.toml
+++ b/tests/test-td-payload/Cargo.toml
@@ -24,7 +24,7 @@ serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 x86 = { version = "0.47.0" }
 ring = { version = "0.17.6", default-features = false, features = ["alloc"] }
 td-shim = { path = "../../td-shim" }
-td-payload = { path = "../../td-payload", features = ["tdx","cet-shstk","stack-guard"] }
+td-payload = { path = "../../td-payload", features = ["tdcall","tdvmcall","cet-shstk","stack-guard"] }
 zerocopy = { version = "0.7.31", features = ["derive"] }
 
 minicov = { version = "0.2", default-features = false, optional = true }
@@ -37,6 +37,7 @@ features = ["spin_no_std"]
 map-physical-memory = true
 
 [features]
-tdx = ["tdx-tdcall", "td-logger/tdx"]
+tdvmcall = ["tdx-tdcall/tdvmcall", "td-logger/tdvmcall"]
+tdcall = ["tdx-tdcall/tdcall"]
 main = []
 coverage = ["minicov"]
