--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -38,6 +38,7 @@ minicov = { version = "0.2", default-features = false, optional = true }
 default = ["tdcall"]
 tdcall = ["tdx-tdcall/tdcall", "td-exception/tdcall"]
 tdvmcall = ["tdx-tdcall/tdvmcall", "td-logger/tdvmcall"]
+tdx = ["tdcall", "tdvmcall"]
 stack-guard = []
 cet-shstk = ["td-exception/cet-shstk"]
 cet-ibt = []
