td-payload,td-exception: introduce no-tdvmcall feature
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -45,3 +45,4 @@ start = []
 benches = ["td-benchmark"]
 coverage = ["minicov"]
 test_heap_size = ["td-benchmark"]
+no-tdvmcall = ["td-shim/no-tdvmcall", "tdx-tdcall/no-tdvmcall", "td-exception/no-tdvmcall", "td-logger/no-tdvmcall"]
