td-payload: introduce no-tdaccept feature
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -46,3 +46,4 @@ benches = ["td-benchmark"]
 coverage = ["minicov"]
 test_heap_size = ["td-benchmark"]
 no-tdvmcall = ["td-shim/no-tdvmcall", "tdx-tdcall/no-tdvmcall", "td-exception/no-tdvmcall", "td-logger/no-tdvmcall"]
+no-tdaccept = ["td-shim/no-tdaccept", "tdx-tdcall/no-tdaccept"]
