td-payload: introduce no-shared-mem feature
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -47,3 +47,4 @@ coverage = ["minicov"]
 test_heap_size = ["td-benchmark"]
 no-tdvmcall = ["td-shim/no-tdvmcall", "tdx-tdcall/no-tdvmcall", "td-exception/no-tdvmcall", "td-logger/no-tdvmcall"]
 no-tdaccept = ["td-shim/no-tdaccept", "tdx-tdcall/no-tdaccept"]
+no-shared-mem = []
