td-payload/Cargo.toml: introduce no-mailbox, no-config
Signed-off-by: Stanislaw Grams <stanislaw.grams@intel.com>

--- a/td-payload/Cargo.toml
+++ b/td-payload/Cargo.toml
@@ -48,3 +48,5 @@ test_heap_size = ["td-benchmark"]
 no-tdvmcall = ["td-shim/no-tdvmcall", "tdx-tdcall/no-tdvmcall", "td-exception/no-tdvmcall", "td-logger/no-tdvmcall"]
 no-tdaccept = ["td-shim/no-tdaccept", "tdx-tdcall/no-tdaccept"]
 no-shared-mem = []
+no-mailbox = ["td-shim/no-mailbox"]
+no-config = ["td-shim/no-config"]
